i'm tired of this

--- a/src/index.html
+++ b/src/index.html
@@ -57,8 +57,8 @@
           </case>
           <case n="'graphic'">
             <div class="graphic">
-              <if condition="item.value.asset === 'graphic-name.html'">
-                <include src="graphic-name.html"></include>
+              <if condition="item.value.asset === 'tree-heat.html'">
+                <include src="tree-heat.html"></include>
               </if>
             </div>
           </case>
